<resources>
    <string name="app_name">GameZone</string>
    <string name="default_image">Default Image</string>
    <string name="game_name">Game Name</string>
    <string name="keywords">Keywords</string>
    <string name="no_internet">No internet</string>
    <string name="back">Back</string>
    <string name="retry">retry</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="gamezone">GameZone</string>
</resources>