<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayGame">

    <WebView
        android:id="@+id/gameWindow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible">
    </WebView>

    <RelativeLayout
        android:id="@+id/noInternetLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:id="@+id/noInternet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="22dp"
            android:contentDescription="@string/no_internet"
            android:foregroundGravity="center"
            android:src="@drawable/no_internet">

        </ImageView>

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            app:srcCompat="@drawable/back"
            tools:ignore="VectorDrawableCompat"
            android:gravity="start|top"
            app:tint="@color/ActionBarColor"
            android:layout_marginLeft="1dp" />

        <ImageView
            android:id="@+id/retry"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:contentDescription="@string/retry"
            android:gravity="top|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/retry"
            app:tint="@color/ActionBarColor"
            tools:ignore="VectorDrawableCompat" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>