<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/gameItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="15dp"
            app:cardElevation="0.5dp">
            <ImageView
                android:id="@+id/gameImage"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:contentDescription="@string/default_image"
                app:srcCompat="@drawable/default_game_image"
                />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/gameDetails"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gameName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2.5dp"
                android:layout_marginTop="2.5dp"
                android:gravity="center_vertical"
                android:hint="@string/game_name"
                android:textColor="#090909"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gameKeywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2.5dp"
                android:gravity="center_vertical"
                android:hint="@string/keywords"
                android:textColor="#777777"
                android:textSize="15sp" />

            <RatingBar
                android:id="@+id/gameRating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="2.5dp"
                android:numStars="5"
                android:progressTint="?attr/ratingBarStyle"
                android:rating="2.5"
                tools:targetApi="lollipop" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>